# spdlog_setup

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  conanfile.py  reformat.sh
cmake/: spdlog_setup-config.cmake.in
include/spdlog_setup/: spdlog_setup.hpp
include/spdlog_setup/details/: conf_impl.h  conf_impl.hpp  fmt.hpp  template_impl.hpp
test/: loggers.test.cpp  others.test.cpp  sinks.test.cpp  thread_pool.test.cpp
test_package/: test_package.cpp
